--- a/ToDoFire/ToDoFire/supportingFiles/Base.lproj/Main.storyboard
+++ b/ToDoFire/ToDoFire/supportingFiles/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Login View Controller-->
+        <!--Register View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="loginViewController" customModule="ToDoFire" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="RegisterViewController" customModule="ToDoFire" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="UIScrollView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -72,7 +72,7 @@
                                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
                                                 <connections>
-                                                    <segue destination="IWF-7E-8eC" kind="show" identifier="taskssegue" id="9vY-8G-qZa"/>
+                                                    <action selector="loginTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="F6Y-fn-Ss5"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UDC-Qd-y7K">
@@ -82,6 +82,9 @@
                                                 <state key="normal" title="Register">
                                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="registerTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GeL-vr-6eg"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -111,7 +114,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="etst" destination="SmC-vn-22E" id="1O5-VU-XSX"/>
+                        <outlet property="emailText" destination="Aea-am-hxw" id="baj-Er-37i"/>
+                        <outlet property="passwordText" destination="Jpl-l7-5yj" id="irg-Kg-VS5"/>
+                        <outlet property="warnLabel" destination="SmC-vn-22E" id="1cd-F4-wlE"/>
+                        <segue destination="IWF-7E-8eC" kind="show" identifier=" " id="5Fm-fi-WfM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
